--- a/GeneratorAdage_Array/index.html
+++ b/GeneratorAdage_Array/index.html
@@ -15,7 +15,7 @@
         <button class="explanation" disabled>Пояснення</button>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
