--- a/UAHsplitCoins_Array/index.html
+++ b/UAHsplitCoins_Array/index.html
@@ -80,7 +80,7 @@
             <h5>Вы сможете полуить: <span>0</span> Биткоинов</h5>
         </div>
     </div>
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
